# pystrip

./: .gitignore  .pystrip.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: development.md
src/pystrip/: __init__.py  __main__.py  cache.py  cli.py  config.py  discovery.py  reporting.py  stripper.py  utils.py  visitor.py
tests/: conftest.py  test_cli.py  test_config.py  test_reporting.py  test_stripper.py
