[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pystrip"
dynamic = ["version"]
description = "Remove comments and docstrings from Python source files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "python",
    "comments",
    "docstrings",
    "type-annotations",
    "strip",
    "libcst"
]
dependencies = [
    "libcst>=1.1.0",
    "rich>=13.0.0",
]
authors = [
  { name = "Zeecka", email = "alex.garrido@protonmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pystrip/pystrip"
Repository = "https://github.com/pystrip/pystrip"
Issues = "https://github.com/pystrip/pystrip/issues"
Changelog = "https://github.com/pystrip/pystrip/blob/main/CHANGELOG.md"
Documentation = "https://github.com/pystrip/pystrip#readme"

[project.scripts]
pystrip = "pystrip.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "ty>=0.0.1a12",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pystrip"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.pystrip]
remove_comments = true
remove_docstrings = true
exclude = ["tests/"]
exclude_glob = ["*.generated.py"]
line_length = 100
jobs = 4
